Fixed a random break in the page by adding a USER check?

--- a/client/src/pages/homepage.css
+++ b/client/src/pages/homepage.css
@@ -13,7 +13,7 @@
   border-radius: 10px;
   max-height: 500px; /* Adjust this value as needed */
   overflow-y: auto; /* Enable vertical scrolling when content overflows */
-  opacity: 90%;
+  opacity: 85%;
 }
 
 h1, h3 {
